@@ -1,3 +1,8 @@
+2008-03-31  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #6007]
+	* string/strfry.c: Handle empty strings again.
+
 2008-03-30  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #5443]
